--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mines-hine",
   "version": "1.0.0",
   "description": "A premium avatar-based life-simulation game for children",
-  "main": "src/main.js",
+  "main": "src-new/main.js",
   "scripts": {
     "start": "http-server . -p 8080",
     "build": "echo 'No build step needed for this project'"
